--- a/TimeOryx/pages/StatPage.xaml
+++ b/TimeOryx/pages/StatPage.xaml
@@ -1,15 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TimeOryx.Achivment_master">
+             x:Class="TimeOryx.pages.StatPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Редактирование" HorizontalOptions="Center"></Label>
-            <StackLayout>
-                <ListView>
-                    
-                </ListView>
-            </StackLayout>
+            <Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
