--- a/TimeOryx/pages/SelectDone.xaml
+++ b/TimeOryx/pages/SelectDone.xaml
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:buttons="clr-namespace:Syncfusion.XForms.Buttons;assembly=Syncfusion.Buttons.XForms"
              x:Class="TimeOryx.pages.SelectDone">
     <ContentPage.Content>
-        <StackLayout x:Name="StackLayout">
-            
+        <StackLayout x:Name="StackLayout" BackgroundColor="#757575">
+            <StackLayout Padding="3,0,3,6" VerticalOptions="EndAndExpand" Orientation="Horizontal">
+                <buttons:SfButton Text="Сохранить" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#494949" Clicked="Save"></buttons:SfButton>
+                <buttons:SfButton Text="Отмена" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" BackgroundColor="#494949"></buttons:SfButton>
+            </StackLayout>
         </StackLayout>
+
     </ContentPage.Content>
 </ContentPage>
