--- a/TimeOryx/views/CalendarMini.xaml
+++ b/TimeOryx/views/CalendarMini.xaml
@@ -17,7 +17,7 @@
     </ContentView.Resources>
     <ContentView.Content>
       <StackLayout x:Name="Calendar" Orientation="Vertical">
-          <StackLayout Orientation="Horizontal" Spacing="8" BackgroundColor="#7b7b7b">
+          <StackLayout Orientation="Horizontal" Spacing="8" BackgroundColor="#494949">
               <Label Text="П" Style="{StaticResource Lablestyle}"></Label>
               <Label Text="В" Style="{StaticResource Lablestyle}"></Label>
               <Label Text="С" Style="{StaticResource Lablestyle}"></Label>
