Notification (Without time)

--- a/TimeOryx/pages/MainPage.xaml
+++ b/TimeOryx/pages/MainPage.xaml
@@ -28,5 +28,14 @@
         </Tab>
         
     </FlyoutItem>
-    
+
+    <FlyoutItem Title="Настройки">
+        <Tab>
+            <ShellContent ContentTemplate="{DataTemplate views:Options}">
+
+            </ShellContent>
+        </Tab>
+
+    </FlyoutItem>
+
 </Shell>
