--- a/TimeOryx/pages/Options.xaml
+++ b/TimeOryx/pages/Options.xaml
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TimeOryx.QuestsPage"
-             Title="Ваши цели">
-    
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Добавить цель" Clicked="MenuItem_OnClicked"></ToolbarItem>
-    </ContentPage.ToolbarItems>
+             x:Class="TimeOryx.Options"
+             Title="Настройки">
+
     <ContentPage.Content>
-        
+   
         <StackLayout x:Name="StackLayout">
+
             
+
         </StackLayout>
+        
     </ContentPage.Content>
+
+    
+
 </ContentPage>
