--- a/TimeOryx/pages/Achievements.xaml
+++ b/TimeOryx/pages/Achievements.xaml
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TimeOryx.Options"
-             Title="Настройки">
+             x:Class="TimeOryx.Achievements"
+             Title="Достижения">
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Order="Secondary" Text="Добавить достижение" Clicked="OpenAddAchievementsPage"></ToolbarItem>
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
    
         <StackLayout x:Name="StackLayout">
 
-            <Button Text="Уведомление" Clicked="Button_Notification_Clicked" />
+            
 
         </StackLayout>
         
