--- a/TimeOryx/pages/QuestsPage.xaml
+++ b/TimeOryx/pages/QuestsPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TimeOryx.QuestsPage"
+             BackgroundColor="#efefef"
              Title="Ваши цели">
     
     <ContentPage.ToolbarItems>
